infra/cdk.out/ListingJetDatabase.template.json
{
 "Resources": {
  "DbSg495F8305": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "RDS + Redis - accepts from private subnets",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::ImportValue": "ListingJetNetwork:ExportsOutputFnGetAttVpc8378EB38CidrBlock14DD2396"
      },
      "Description": "Private subnets to PostgreSQL",
      "FromPort": 5432,
      "IpProtocol": "tcp",
      "ToPort": 5432
     },
     {
      "CidrIp": {
       "Fn::ImportValue": "ListingJetNetwork:ExportsOutputFnGetAttVpc8378EB38CidrBlock14DD2396"
      },
      "Description": "Private subnets to Redis",
      "FromPort": 6379,
      "IpProtocol": "tcp",
      "ToPort": 6379
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "ListingJetNetwork:ExportsOutputRefVpc8378EB38272D6E3A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ListingJetDatabase/DbSg/Resource"
   }
  },
  "PostgresSubnetGroup9F8A4D6E": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for Postgres database",
    "SubnetIds": [
     {
      "Fn::ImportValue": "ListingJetNetwork:ExportsOutputRefVpcPrivateSubnet1Subnet536B997AFD4CC940"
     },
     {
      "Fn::ImportValue": "ListingJetNetwork:ExportsOutputRefVpcPrivateSubnet2Subnet3788AAA1380949A3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ListingJetDatabase/Postgres/SubnetGroup/Default"
   }
  },
  "ListingJetDatabasePostgresSecret3A39D1513fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"listingjet\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ListingJetDatabase/Postgres/Secret/Resource"
   }
  },
  "PostgresSecretAttachment75CD6F6F": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "ListingJetDatabasePostgresSecret3A39D1513fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "Postgres9DC8BB04"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "ListingJetDatabase/Postgres/Secret/Attachment/Resource"
   }
  },
  "Postgres9DC8BB04": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "BackupRetentionPeriod": 1,
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t4g.micro",
    "DBName": "listingjet",
    "DBSubnetGroupName": {
     "Ref": "PostgresSubnetGroup9F8A4D6E"
    },
    "DeletionProtection": false,
    "Engine": "postgres",
    "EngineVersion": "16",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "ListingJetDatabasePostgresSecret3A39D1513fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "listingjet",
    "MaxAllocatedStorage": 50,
    "MultiAZ": false,
    "PubliclyAccessible": false,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "DbSg495F8305",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Snapshot",
   "DeletionPolicy": "Snapshot",
   "Metadata": {
    "aws:cdk:path": "ListingJetDatabase/Postgres/Resource"
   }
  },
  "RedisSubnets": {
   "Type": "AWS::ElastiCache::SubnetGroup",
   "Properties": {
    "Description": "Redis subnet group",
    "SubnetIds": [
     {
      "Fn::ImportValue": "ListingJetNetwork:ExportsOutputRefVpcPrivateSubnet1Subnet536B997AFD4CC940"
     },
     {
      "Fn::ImportValue": "ListingJetNetwork:ExportsOutputRefVpcPrivateSubnet2Subnet3788AAA1380949A3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ListingJetDatabase/RedisSubnets"
   }
  },
  "RedisSgFB48DCCD": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Redis - accepts from private subnets",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::ImportValue": "ListingJetNetwork:ExportsOutputFnGetAttVpc8378EB38CidrBlock14DD2396"
      },
      "Description": "Private subnets to PostgreSQL",
      "FromPort": 5432,
      "IpProtocol": "tcp",
      "ToPort": 5432
     },
     {
      "CidrIp": {
       "Fn::ImportValue": "ListingJetNetwork:ExportsOutputFnGetAttVpc8378EB38CidrBlock14DD2396"
      },
      "Description": "Private subnets to Redis",
      "FromPort": 6379,
      "IpProtocol": "tcp",
      "ToPort": 6379
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "ListingJetNetwork:ExportsOutputRefVpc8378EB38272D6E3A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ListingJetDatabase/RedisSg/Resource"
   }
  },
  "Redis": {
   "Type": "AWS::ElastiCache::CacheCluster",
   "Properties": {
    "CacheNodeType": "cache.t4g.micro",
    "CacheSubnetGroupName": {
     "Ref": "RedisSubnets"
    },
    "Engine": "redis",
    "EngineVersion": "7.1",
    "NumCacheNodes": 1,
    "VpcSecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "RedisSgFB48DCCD",
       "GroupId"
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ListingJetDatabase/Redis"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/12OwcoCMQyEn8V7N+qqD/C7gngT17tkY3Sru1WaFJHSdxf/oqingW9mkimhnM5gNMCbFLQ/F51tINaKdDZ4k11kKiHWTMFbvS/9JVxNdXBfIBm/F4gLVGxQeOVE0RGbOjSO9d1ZzD/BK10zedbsv5rJyD+VHh0e2UPML5/BLFv0R9Y/VaS2Z6fmHfh1kuEORS0htZwPfc+qnkbVBVH2KSWzvmt7ccMJjEsYjwYnsbbwwantGTZZHy9BnBc0AQAA"
   },
   "Metadata": {
    "aws:cdk:path": "ListingJetDatabase/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputFnGetAttRedisRedisEndpointAddress0B69B4FF": {
   "Value": {
    "Fn::GetAtt": [
     "Redis",
     "RedisEndpoint.Address"
    ]
   },
   "Export": {
    "Name": "ListingJetDatabase:ExportsOutputFnGetAttRedisRedisEndpointAddress0B69B4FF"
   }
  },
  "ExportsOutputFnGetAttRedisRedisEndpointPortC04B9AC3": {
   "Value": {
    "Fn::GetAtt": [
     "Redis",
     "RedisEndpoint.Port"
    ]
   },
   "Export": {
    "Name": "ListingJetDatabase:ExportsOutputFnGetAttRedisRedisEndpointPortC04B9AC3"
   }
  },
  "ExportsOutputFnGetAttPostgres9DC8BB04EndpointAddress36F9722A": {
   "Value": {
    "Fn::GetAtt": [
     "Postgres9DC8BB04",
     "Endpoint.Address"
    ]
   },
   "Export": {
    "Name": "ListingJetDatabase:ExportsOutputFnGetAttPostgres9DC8BB04EndpointAddress36F9722A"
   }
  },
  "ExportsOutputRefPostgresSecretAttachment75CD6F6F9ED7447B": {
   "Value": {
    "Ref": "PostgresSecretAttachment75CD6F6F"
   },
   "Export": {
    "Name": "ListingJetDatabase:ExportsOutputRefPostgresSecretAttachment75CD6F6F9ED7447B"
   }
  },
  "ExportsOutputRefPostgres9DC8BB0479C34812": {
   "Value": {
    "Ref": "Postgres9DC8BB04"
   },
   "Export": {
    "Name": "ListingJetDatabase:ExportsOutputRefPostgres9DC8BB0479C34812"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
